fix align

--- a/features/features.css
+++ b/features/features.css
@@ -1,5 +1,5 @@
 .component-features {
-  margin: 0 auto!important;
+  margin: 0 auto 80px!important;
 }
 .component-features > h3.component-features-title{
     margin: 0 auto 40px;
